--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Cyril Vimard",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.2.4"
   },
   "devDependencies": {
